# Modelado

Practica 1/: Fase3_bullet.py  Fase4_bullet.py  barrier.urdf  husky_mod.urdf  mat.urdf  plot_results.py  ramp.urdf
Practica2/: Fase3_Nicolas_garcia.py  Modelo_final.blend  cubo.blend  plot_results.py
Practica2/meshes/dae/: Cube.004.dae  Cube.005.dae  Cube.035.dae  Torus.000.dae  Torus.006.dae  Torus.007.dae
Practica2/urdf/: cube.urdf  robot.urdf
Practica3_ws/src/robot_description/: CMakeLists.txt  package.xml
Practica3_ws/src/robot_description/config/: controllers.yaml
Practica3_ws/src/robot_description/controller/: speed_controller.cpp
Practica3_ws/src/robot_description/include/robot_description/: speed_controller.hpp
Practica3_ws/src/robot_description/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py  robot_vel.launch.py  view_ur.launch.py
Practica3_ws/src/robot_description/meshes/dae/: Cube.001.dae  Cube.003.dae  Cube.010.dae  Cube.031.dae  Cube.033.dae  Cube.034.dae  Cube.036.dae  Cube.dae  Cylinder.027.dae  Suzanne.dae  Torus.001.dae  Torus.002.dae  Torus.004.dae  Torus.008.dae  Torus.010.dae  Torus.011.dae
Practica3_ws/src/robot_description/rviz/: view_robot.rviz
Practica3_ws/src/robot_description/urdf/: robot.urdf.xacro  robot_conbrazo.urdf.xacro  ros2_control.urdf.xacro
Practica3_ws/src/robot_description/urdf/meshes/dae/: Cube.001.dae  Cube.003.dae  Cube.004.dae  Cube.005.dae  Cube.010.dae  Cube.033.dae  Cube.034.dae  Cube.035.dae  Cube.036.dae  Cube.dae  Cylinder.027.dae  Suzanne.dae  Torus.000.dae  Torus.001.dae  Torus.002.dae  Torus.004.dae  Torus.006.dae  Torus.007.dae  Torus.008.dae  Torus.010.dae
Practica3_ws/src/robot_description/urdf/sensors/: sensors.urdf.xacro  sensors2.urdf.xacro
Practica3_ws/src/robot_description/urdf/wheels/: ant.robot.urdf.xacro
